# eldera_DAW

./: .gitignore  .pre-commit-config.yaml  MANUAL_TECNICO.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml
scratch/: delete_director.py
src/backend/: .dockerignore  Dockerfile  alembic.ini  auth.py  check_tags.py  database.py  init_db.py  main.py  models.py  models_extended.py  permissions.py  schemas.py  schemas_extended.py  start.sh  utils.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 1053bbd6ffce_remove_contacts.py  46bf0760714e_clean_phase1_initial.py  62d11d93a63c_add_user_tracking.py  988afb3577dc_remove_documents.py  999999999999_add_saas_fields.py  a6c63a0920c3_remove_therapy.py  a8a865e8fe46_harden_extended_models_final.py  b252ee9cd3c4_remove_devices.py  ba5d3c37e9bd_manual_add_target_name.py  ddae3fe9e15f_add_urinary_incontinence_frequency.py  e88885c5215b_add_specific_invasive_device_fields.py  ebe4af00eb27_audit_add_residence_id_to_clinical_.py  fix_missing_columns.py
src/backend/routers/: audit_logs.py  auth.py  dashboard.py  residents.py
src/backend/services/: storage.py  storage_supabase.py
src/backend/tests/: __init__.py  test_main.py
src/eldera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/frontend/: Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx  index.css  main.jsx
src/frontend/src/api/: axios.js
src/frontend/src/components/: AppLayout.jsx  Button.jsx  Card.jsx  DashboardLayout.jsx  DateRangeFilter.jsx  DynamicListInput.jsx  DynamicLists.jsx  FormSections.jsx  GeneralFollowups.jsx  (+15 more)
(+18 files in other folders)
