[project]
name = "eldera"
version = "0.1.0"
description = "Sistema de Gestión de Residencias de Ancianos"
authors = [
    {name = "David", email = "david@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-multipart",
    "pydantic",
    "python-dotenv",
    "bcrypt",
    "pyjwt",
    "alembic",
    "supabase",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",
]


[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [] # Enable all selected rules including E501

[tool.ruff.lint.flake8-bugbear]
# Allow functional calls in argument defaults for FastAPI
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.File",
    "fastapi.params.File",
    "fastapi.Body",
    "fastapi.params.Body",
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
